# SOEM

./: CMakeLists.txt  package.xml
osal/win32/: osal.c
oshw/win32/: nicdrv.h  oshw.c
